--- a/aws-eks/overlay/aws-dev/kustomization.yml
+++ b/aws-eks/overlay/aws-dev/kustomization.yml
@@ -26,7 +26,7 @@ secretGenerator:
 
 images:
   # base/istory-app/istory-app-deploy.yml 내의 이미지 이름과 동일해야 변경됨
-  - name: lmg5615/istory:latest # 변경필요
+  - name: lmg5615/istory # 변경필요
     newTag: latest
 
 generatorOptions:
