--- a/aws-eks/overlay/aws-dev/patch-lb-annotations.yml
+++ b/aws-eks/overlay/aws-dev/patch-lb-annotations.yml
@@ -7,5 +7,5 @@ metadata:
     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
     service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
     istory.io/infra: aws
-    istory.io/env: dev
+    istory.io/env: prod
     istory.io/tier: app-lb
